src/config/database/snapshots/roadster__config__database__tests__serialization@case_01.snap
---
source: src/config/database/mod.rs
expression: database
---
uri = 'https://example.com:1234/'
auto-migrate = true
connect-timeout = 1000
connect-lazy = true
acquire-timeout = 1000
min-connections = 0
max-connections = 1
test-on-checkout = true
retry-connection = true
temporary-test-db = false
temporary-test-db-clean-up = true
