src/config/database/snapshots/roadster__config__database__tests__serialization@case_2.snap
---
source: src/config/database/mod.rs
expression: database
---
uri = 'https://example.com:1234/'
auto-migrate = true
connect-timeout = 1000
connect-lazy = true
acquire-timeout = 2000
idle-timeout = 3000
max-lifetime = 4000
min-connections = 0
max-connections = 1
test-on-checkout = true
